fix padding on basket button in nav, change search btton to display none on smaller screens

--- a/static/root.css
+++ b/static/root.css
@@ -29,6 +29,10 @@ nav a {
     color: var(--white);
 }
 
+.navbar-toggler-icon {
+    color: var(--white)!important;
+}
+
 nav a:hover {
     color: var(--white);
 }
